Make BrowsingDataHandler observe WebHistoryService deletions

BrowsingDataHandler observes local history deletions, but not synced
history deletions. In cases where there are no local history entries
to delete, it can happen that the history page does not reload and it
looks as if the deletion failed.

See https://docs.google.com/document/d/1Fd6CdBf6UMbYbkwSjEKyFOxew0Xid5IaT-QwnFchjig/
for background.

This CL
1. Adds an Observer subclass to the WebHistoryService.
2. Registers BrowsingHistoryHandler as a WebHistoryService::Observer;
   and since WebHistoryService's existence is based on whether history
   sync is enabled, we also register as a SyncServiceObserver.
3. Adds a test to browsing_history_handler_unittest.cc.

Also tested manually on Android - seems to solve the problem described
in the above mentioned document.

BUG=604114,630164

Review-Url: https://codereview.chromium.org/2263613002
Cr-Commit-Position: refs/heads/master@{#414679}

Former-commit-id: d39070b1ac01776e5a3800a9ef55fe43dce74225