components/history/core/browser/web_history_service.h
@@ -14,6 +14,7 @@
 #include "base/macros.h"
 #include "base/memory/ref_counted.h"
 #include "base/memory/weak_ptr.h"
+#include "base/observer_list.h"
 #include "components/history/core/browser/history_types.h"
 #include "components/keyed_service/core/keyed_service.h"
 
@@ -33,6 +34,8 @@ class OAuth2TokenService;
 class SigninManagerBase;
 
 namespace history {
+
+class WebHistoryServiceObserver;
 
 // Provides an API for querying Google servers for a signed-in user's
 // synced history visits. It is roughly analogous to HistoryService, and
@@ -94,6 +97,9 @@ class WebHistoryService : public KeyedService {
       SigninManagerBase* signin_manager,
       const scoped_refptr<net::URLRequestContextGetter>& request_context);
   ~WebHistoryService() override;
+
+  void AddObserver(WebHistoryServiceObserver* observer);
+  void RemoveObserver(WebHistoryServiceObserver* observer);
 
   // Searches synced history for visits matching |text_query|. The timeframe to
   // search, along with other options, is specified in |options|. If
@@ -218,6 +224,9 @@ class WebHistoryService : public KeyedService {
   // Pending queries for other forms of browsing history to be canceled if not
   // complete by profile shutdown.
   std::set<Request*> pending_other_forms_of_browsing_history_requests_;
+
+  // Observers.
+  base::ObserverList<WebHistoryServiceObserver, true> observer_list_;
 
   base::WeakPtrFactory<WebHistoryService> weak_ptr_factory_;
 
